--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   // Crear el contenido de la vCard
   const vCardData = `BEGIN:VCARD
 VERSION:3.0
-N:Apellido;Nombre
+N:Rodriguez;Andres
 FN:Andres Rodriguez
 ORG:Oben Media
 TEL;TYPE=work,voice:+56977778989
