--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="icon" href="/favicon.ico" />
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
+<body class="bg-gray-800 text-gray-800 font-sans">
   <main class="max-w-md mx-auto mt-10 px-6 text-center">
-    <img src="/obenlogo.png" alt="Logo" class="w-24 h-24 mx-auto mb-4 rounded-full shadow" />
+    <div class="w-28 h-28 mx-auto mb-4 rounded-full shadow overflow-hidden">
+      <img src="/obenlogo.png" alt="Logo" class="w-full h-full object-cover" />
+    </div>
+    
     <h1 class="text-2xl font-bold mb-2">Conecta con Nosotros</h1>
     <p class="mb-6 text-gray-600">Accede a todos nuestros canales desde un solo lugar</p>
 
