--- a/index.html
+++ b/index.html
@@ -2,31 +2,143 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Enlaces de Mi Agencia</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Conecta con Nosotros</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #2C3E50 0%, #BDC3C7 100%);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      padding: 30px;
+      max-width: 350px;
+      width: 90%;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    }
+
+    .logo-container {
+      width: 64px;
+      height: 64px;
+      margin: 0 auto 10px;
+      border-radius: 50%;
+      overflow: hidden;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    .logo-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+    h1 {
+      font-size: 22px;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    p.subtitle {
+      font-size: 14px;
+      color: #f8f8f8;
+      margin-bottom: 25px;
+      line-height: 1.4;
+    }
+
+    .links a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 12px 15px;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    .links a:hover {
+      opacity: 0.95;
+    }
+
+    .icon {
+      width: 22px;
+      height: 22px;
+      margin-right: 10px;
+    }
+
+    /* Colores por red social */
+    .instagram {
+      background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976);
+    }
+
+    .whatsapp {
+      background-color: #25D366;
+    }
+
+    .website {
+      background-color: #34495e;
+    }
+
+    footer {
+      margin-top: 20px;
+      font-size: 12px;
+      color: #eee;
+    }
+  </style>
 </head>
-<body class="bg-gray-300 text-gray-800 font-sans">
-  <main class="max-w-md mx-auto mt-10 px-6 text-center">
-    <div class="w-28 h-28 mx-auto mb-4 rounded-full shadow overflow-hidden">
-      <img src="/obenlogo.png" alt="Logo" class="w-full h-full object-cover" />
-    </div>
-    
-    <h1 class="text-2xl font-bold mb-2">Conecta con Nosotros</h1>
-    <p class="mb-6 text-gray-600">Accede a todos nuestros canales desde un solo lugar</p>
+<body>
 
-    <div class="space-y-4">
-      <a href="https://instagram.com/oben.media" target="_blank" class="block w-full bg-pink-500 text-white py-3 rounded-lg font-semibold shadow hover:bg-pink-600 transition">📸 Síguenos en Instagram</a>
-
-      <a href="https://wa.me/56977778989" target="_blank" class="block w-full bg-green-600 text-white py-3 rounded-lg font-semibold shadow hover:bg-green-700 transition">💬 Escríbenos por WhatsApp</a>
-
-      <a href="https://obenmedia.cl" target="_blank" class="block w-full bg-blue-600 text-white py-3 rounded-lg font-semibold shadow hover:bg-blue-700 transition">🌐 Visita nuestro sitio web</a>
+  <div class="container">
+    <!-- Logo -->
+    <div class="logo-container">
+      <img src="obenlogo.png" alt="Logo Oben Media" />
     </div>
 
-    <footer class="mt-10 text-xs text-gray-500">
-      © 2025 Oben Media. Todos los derechos reservados.
+    <!-- Título y subtítulo -->
+    <h1>Conecta con Nosotros</h1>
+    <p class="subtitle">Accede a todos nuestros canales desde un solo lugar</p>
+
+    <!-- Botones -->
+    <div class="links">
+      <!-- Instagram -->
+      <a href="https://instagram.com/oben.media" target="_blank" class="instagram">
+        <img src="icons/instagram.svg" alt="Instagram" class="icon" />
+        Síguenos en Instagram
+      </a>
+
+      <!-- WhatsApp -->
+      <a href="https://wa.me/56977778989" target="_blank" class="whatsapp">
+        <img src="icons/whatsapp.svg" alt="WhatsApp" class="icon" />
+        Contáctanos por WhatsApp
+      </a>
+
+      <!-- Sitio Web -->
+      <a href="https://obenmedia.cl " target="_blank" class="website">
+        <img src="icons/internet-svgrepo-com.svg" alt="Sitio Web" class="icon" />
+        Visita nuestro sitio web
+      </a>
+    </div>
+
+    <!-- Pie de página -->
+    <footer>
+      &copy; 2025 Oben Media. Todos los derechos reservados.
     </footer>
-  </main>
+  </div>
+
 </body>
 </html>
